# Mix-And-Mangle

backend/: pyproject.toml
backend/src/: main.py
backend/src/app/: app.py  schema.py  sio.py
backend/src/app/router/: __init__.py  event_router.py  quiz_router.py  session_router.py  socket_router.py  user_router.py
backend/src/client/: elice_ai_client.py
backend/src/config/: __init__.py  settings.py
backend/src/db/: model.py  session.py
backend/src/static/: index.html
backend/src/util/: enum.py
frontend/: .env  .eslintrc.json  next.config.mjs  orval.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts
frontend/.storybook/: preview.tsx
frontend/src/app/: _provider.tsx  error.tsx  globals.css  layout.tsx  manifest.json  page.tsx
frontend/src/app/event/: layout.tsx  page.tsx
frontend/src/app/user/: layout.tsx
frontend/src/components/: InitialSetting.tsx  LogoutButton.tsx
frontend/src/components/ui/: GroupList.tsx  ai-generator.tsx  button.tsx  calendar.tsx  date-time-picker.tsx  dialog.tsx  form.tsx  group-list.tsx  input.tsx  label.tsx  select.tsx  stepper.tsx  textarea.tsx  timepicker-input.tsx  timepicker.tsx  toast.tsx  toggle.tsx
frontend/src/context/: socket.tsx
frontend/src/font/: blackHanSans.ts
frontend/src/hooks/: use-toast.ts
frontend/src/lib/: timepicker.ts
frontend/src/services/: api.schemas.ts
frontend/src/services/네트워크-세션/: 네트워크-세션.ts  네트워크-세션.zod.ts
frontend/src/store/: event-funnel.ts  timer.ts  user.ts
frontend/src/utils/: axios.ts  localStorage.ts
(+34 files in other folders)
